--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,10 +16,7 @@ Table of Contents:
 /*grijs #899CA0 en donkergroen #1C2B32*/
 
 
-/*////////////////////////
-    1. Global Styles
-
- */
+/*//////////////////////// 1. Global Styles */
 
 
 
@@ -28,11 +25,11 @@ Table of Contents:
     padding: 0;
     box-sizing: border-box;
 }
-/*///////////////////////!*/
 
 
 
-/*////////////////////////
+
+
 /*    2. Typography*/
 
 
@@ -42,51 +39,167 @@ body {
 }
 
 h1 {
-    font-size: 120px;
+    font-size: 60px;
     font-weight: 700;
     text-align: center;
 }
 
 p {
+    font-size: 10px;
     text-align: center;
+
+
 }
 
 
 
 
-/*///////////////////////!*!*/
 
 
 
-/*////////////////////////
-    3. Areas
-////////////////////////*/
 
 
 
-/*///////////// 3.1 Header
 
-h1 {
+
+/*///////////////////////3. Areas/////////////////////////*/
+
+
+
+/*///////////// 3.1 Header /////////////*/
+
+
+
+header {
+    background: url('../assets/images/mountains.jpg') no-repeat center local;
+    background-size: cover;
     text-align: center;
-                                           }
+    /*!*max-width: 1000px;*! --???*/
+}
+
+section {
+    text-align: center;
+
+}
 
 
 
-/////////////*/
+header {
+    margin: 0 auto;
+    padding: 15%;
+}
+
+.url-field {
+    border-radius: 15px 0px 0px 15px;
+    background-color: transparent;
+    padding: 5px;
+    color: black;
+    margin: -10px;
+
+
+
+}
+
+.availabitlity-button {
+    border-radius: 0px 15px 15px 0px;
+    background-color: black;
+    padding: 5px;
+    color: white;
+
+
+/*to do : header text naar boven + verkleinen button*/
+}
+
+/*////////!*3.15 MAIN*!*!///////*/
+
+main {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 
 
 
 
 /*///////////// 3.2 Testimonial /////////////*/
 
-
+.testimonials-customers {
+    border: 1px solid grey;
+}
 
 /*///////////// 3.3 Support /////////////*/
 
+.callcenter-image {
+    border-radius: 30px;
+}
+.text-support {
+    text-align: left;
+    margin: 20px;
+}
+
+.link-support {
+    color: grey;
+    text-underline: grey;
+
+}
+
+a:hover {
+   text-decoration: none;
+}
+/*ERROR MET HEADER ALS AANZET*/
+
+div {
+    display: flex;
+    justify-content: center;
+
+}
+
+.contact-button  {
+    background-color: black;
+    color: white;
+    border-radius: 15px 15px 15px 15px;
+    padding: 10px;
+    margin: 1px;
+
+}
 
 
 /*///////////// 3.4 Faq /////////////*/
 
+details {
+    border: transparent;
+    border-radius: 4px;
+    padding: .5em .5em 0;
+
+}
+
+summary {
+    font-weight: bold;
+    margin: -.5em -.5em 0;
+    padding: .5em;
+    background-color: white;
+
+
+}
+
+details[open] {
+    padding: .5em;
+    background-color: grey;
+    border-radius: 0px 0px 15px 15px;
+}
+
+details[open] summary {
+    border-bottom: transparent;
+    margin-bottom: .5em;
+
+}
+
 
 
 /*///////////// 3.5 Footer /////////////*/
+
+.footer-copyright {
+    background-color: black;
+    color: white;
+    padding: 30px;
+}
